--- a/v4/en-us/six-appeal/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook.html
@@ -78,7 +78,7 @@
       <span class="italic">it gives them a reason to pay attention to it.</span
       ><span class="font-bold"> This is key.</span>
     </p>
-    <p>Example hook statements:</p>
+    <p class="mt-10 text-lg">Example hook statements:</p>
     <div class="text-center mt-10 text-lg">
       <p class="my-0">So you've got a great business.</p>
       <p class="my-0">Maybe even one of the best our there.</p>
@@ -110,7 +110,7 @@
       In order to violate expectations, you've got to know what the expectations
       are.
     </p>
-    <p>
+    <p class="mt-10 text-lg">
       Say you're writing a novel, even, and you've got to come up with a jacket
       description that's emotionally engaging. First consider your story and
       what's normal about it. It is a story about a girl who graduates college,
@@ -139,7 +139,70 @@
       (Hint: You don't care what your peers think; your goal is to write for the
       person who's going to pull money out of their pocket and give it to you.)
       Therefore, when you're considering how you can gracefully remember whose
-      norms we're talking about
+      norms we're talking about.
+    </p>
+    <h1 class="uppercase text-3xl font-bold mt-20 mb-20 text-center">
+      Hook statement prompt: Violating expectations. Hard.
+    </h1>
+    <ol class="mt-10">
+      <li>
+        <span class="font-bold text-lg"
+          >Consider the piece you're writing.</span
+        >
+        <p class="text-lg">
+          If you had to create a movie trailer, and the reader were the damsel
+          in distress, with you plating the hero, what would happen?
+        </p>
+      </li>
+      <li class="mt-10">
+        <span class="font-bold text-lg">Now make a list.</span>
+        <p class="text-lg">
+          What are the things in the movie trailer that are all obvious,
+          generic, stereotypical, cliché, expected and incredibly commmonplace?
+        </p>
+      </li>
+      <li class="mt-10">
+        <span class="font-bold text-lg"
+          >Try isolating on of those elements and figure out how you can flip
+          the script.</span
+        >
+        <p class="text-lg">
+          What could you say to violate the reader's expectation of what you're
+          going to say? What can you say to evoke surprise? Create some
+          cognitive dissonance? Suggest there's a better way?
+        </p>
+      </li>
+    </ol>
+    <p class="uppercase text-2xl font-bold mt-10">Example</p>
+    <p class="mt-10 text-lg">
+      When writing a landing page for an email marketing intelligence agency,
+      the norm for them would have been a movie trailer that went something
+      like,
+    </p>
+    <blockquote class="mt-10 italic px-24">
+      "Marketing managers cries at desk because revenue has dropped dramatically
+      and she doesn't know what to do about it. So she takes out and ad in a
+      magazine, costing the company thousands of dollars, and then hurries to
+      send out "that pesky newsletter" that she forgot about 3 weeks in a row
+      now, before rushing off to happy hour to forget about her woes.""
+    </blockquote>
+    <p class="mt-10 text-lg">
+      The obvious, expected scene here is the marketing manager just haphazardly
+      sending out a "newsletter" as if it were just an annotying task.
+    </p>
+    <p class="mt-10 text-lg">So in coming up with a hook, I wrote this:</p>
+    <blockquote class="mt-10 italic px-24">
+      Free-wheeling your email marketing is like attempting to fly an airplane
+      without knowing how-except the pilot isn't the only one in trouble. Your
+      entire company is.
+    </blockquote>
+    <p class="mt-10 text-lg">
+      It makes a clear analogy of something everyone can understan, (how
+      terrible it would be trying to fly a plane by yourself), and also makes it
+      clear that free-wheeling is not a samrt idea, and most importantly, I've
+      just flipped the script from everything she's been thinking, giving her a
+      reason to pay attention to me. Maybe the reason her revenue is suffering
+      is because she is freewheeling her email marketing. Cue instant attention.
     </p>
   </body>
 </html>
