Adding the story

--- a/v4/en-us/six-appeal/worldview/worldviewFour.html
+++ b/v4/en-us/six-appeal/worldview/worldviewFour.html
@@ -65,7 +65,7 @@
       them the right cues and signals to help them understand which tribe you
       (and what you're selling) represent.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       No matter what you're selling, if it helps them feel more like them, and
       helps them feel like they belong in the tribe they've self-identified
       with, they will want it.
@@ -129,7 +129,7 @@
       reasons will also influence why the person who's going to buy it, will buy
       it.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       Because in every way, shape, and form, what you're selling is a
       manifestation of your worldview.
     </p>
