--- a/v4/en-us/six-appeal/worldview/worldviewOne.html
+++ b/v4/en-us/six-appeal/worldview/worldviewOne.html
@@ -9,9 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="px-24 py-8 bg-white">
-    <h1 class="text-5xl font-bold text-center">Step Two: Worldview</h1>
-    <p class="mt-6 text-2xl uppercase font-bold text-center">
-      Step two introduction: Why lesson one was so darn hard
+    <p class="mt-20 mb-20 text-5xl uppercase font-bold text-center">
+      Why lesson one was so darn hard
     </p>
     <p class="mt-6 text-lg">
       So lesson one was a lot more difficult than you probably expected. Wasn't
