--- a/v4/en-us/six-appeal/worldview/worldviewSeven.html
+++ b/v4/en-us/six-appeal/worldview/worldviewSeven.html
@@ -20,7 +20,7 @@
       they'll feel about what you say to them, and in which ways.
     </p>
     <p class="mt-6 text-lg">And with that comes this truth:</p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       You cannot successfully sell anything, when, in the process, you
       accidentally violate someone's sense of IDENTITY.
     </p>
@@ -83,7 +83,7 @@
       we've got a strong emotional hook statement, do we begin to flesh out the
       rest of our message-the details, the must-knows, the extras.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       We all want brands to inspire us and express our values so well that being
       a customer becomes a source of pride and joy for us.
     </p>
@@ -160,7 +160,7 @@
       I promise this will get easier as you learn to adopt the right mindset
       when you write to sell.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       For now, don't worry so much about picking the perfect word; worry more
       about picking the perfect message.
     </p>
