--- a/v4/en-us/six-appeal/worldview/worldviewThree.html
+++ b/v4/en-us/six-appeal/worldview/worldviewThree.html
@@ -40,7 +40,7 @@
       And that's why worldview is so imperative for you to understand—much more
       than demographics or basic psychographics or superficial customer avatars.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-3xl text-center px-32">
       Because you have no choice but to adjust the frame of your message
       depending on which color glasses your buyer is wearing.
     </p>
