--- a/v4/en-us/six-appeal/worldview/worldviewSix.html
+++ b/v4/en-us/six-appeal/worldview/worldviewSix.html
@@ -19,7 +19,7 @@
       analyzing your customers' perspectives, and look at their language through
       the lens of this thought process.
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-lg text-3xl text-center px-32">
       What type of worldview would a person have to have to make X statement? To
       feel a certai way? To say a certain thing?
     </p>
@@ -53,7 +53,7 @@
       its own. So in order to make friends, you need to seek out people who have
       similar world views, right?
     </p>
-    <p class="mt-20 mb-20 italic text-lg font-bold text-3xl text-center px-32">
+    <p class="mt-20 mb-20 italic text-3xl text-center px-32">
       Research reveals that consumers percieve the same type of personality
       characteristics in brands as they do in other people.
     </p>
