Adding video and Final Edits part

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -204,5 +204,11 @@
       reason to pay attention to me. Maybe the reason her revenue is suffering
       is because she is freewheeling her email marketing. Cue instant attention.
     </p>
+    <video
+      src="/v4/en-us/playlists/sampleVideo.mp4"
+      autoplay="false"
+      controls="true"
+      class="mt-20"
+    ></video>
   </body>
 </html>
