Width and Height of the video

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -208,7 +208,7 @@
       src="/v4/en-us/playlists/sampleVideo.mp4"
       autoplay="false"
       controls="true"
-      class="mt-20"
+      class="mt-20 w-full h-full"
     ></video>
   </body>
 </html>
