Changin video path

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -205,7 +205,7 @@
       is because she is freewheeling her email marketing. Cue instant attention.
     </p>
     <video
-      src="https://github.com/HMendoz/marketing-training/blob/master/v4/en-us/playlists/sampleVideo.mp4"
+      src="/v4/en-us/playlists/sampleVideo.mp4"
       autoplay="false"
       controls="true"
       class="mt-20 w-full h-full"
