Adding poster to the video

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -206,6 +206,7 @@
     </p>
     <video
       src="/v4/en-us/playlists/sampleVideo.mp4"
+      poster="/v4/en-us/playlists/Training_Thumbnail.png"
       autoplay="false"
       controls="true"
       class="mt-20 w-full h-full"
