Fixing video tag

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -205,11 +205,12 @@
       is because she is freewheeling her email marketing. Cue instant attention.
     </p>
     <video
-      src="/v4/en-us/playlists/sampleVideo.mp4"
       poster="/v4/en-us/playlists/Training_Thumbnail.png"
       autoplay="false"
       controls="true"
       class="mt-20 w-full h-full"
-    ></video>
+    >
+      <source src="/v4/en-us/playlists/sampleVideo.mp4" />
+    </video>
   </body>
 </html>
