--- a/v4/en-us/six-appeal/supporting-details/supportingDetailsTwo.html
+++ b/v4/en-us/six-appeal/supporting-details/supportingDetailsTwo.html
@@ -80,7 +80,9 @@
     <p class="mt-20 mb-20 text-center px-32 text-3xl italic">
       The tangible level what they get:
     </p>
-    <p class="mb-20 text-center px-32 textsm">A picture printed on a canvas.</p>
+    <p class="mb-20 text-center px-32 text-sm">
+      A picture printed on a canvas.
+    </p>
     <p class="mb-20 text-center px-32 text-3xl italic">
       The benefits level what they get:
     </p>
