--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -57,7 +57,7 @@
       contain an element of unexpected. Because surprise happens when a human's
       guessing mechanism fails.
     </p>
-    <p class="text-3xl italic text-center font-bold mt-20 mb-20">
+    <p class="text-3xl italic mt-20 mb-20 text-center px-32">
       Your job is to break the pattern.
     </p>
     <p class="mt-10 text-lg">How do you do that?</p>
@@ -141,9 +141,9 @@
       Therefore, when you're considering how you can gracefully remember whose
       norms we're talking about.
     </p>
-    <h1 class="uppercase text-3xl font-bold mt-20 mb-20 text-center">
+    <p class="text-3xl italic mt-20 mb-20 text-center px-32">
       Hook statement prompt: Violating expectations. Hard.
-    </h1>
+    </p>
     <ol class="mt-10">
       <li>
         <span class="font-bold text-lg"
@@ -179,24 +179,24 @@
       the norm for them would have been a movie trailer that went something
       like,
     </p>
-    <blockquote class="mt-10 italic px-24">
+    <p class="mt-20 mb-20 text-center px-32 text-sm">
       "Marketing managers cries at desk because revenue has dropped dramatically
       and she doesn't know what to do about it. So she takes out and ad in a
       magazine, costing the company thousands of dollars, and then hurries to
       send out "that pesky newsletter" that she forgot about 3 weeks in a row
       now, before rushing off to happy hour to forget about her woes.""
-    </blockquote>
+    </p>
     <p class="mt-10 text-lg">
       The obvious, expected scene here is the marketing manager just haphazardly
       sending out a "newsletter" as if it were just an annotying task.
     </p>
     <p class="mt-10 text-lg">So in coming up with a hook, I wrote this:</p>
-    <blockquote class="mt-10 italic px-24">
+    <p class="mt-20 mb-20 text-center px-32 text-sm">
       Free-wheeling your email marketing is like attempting to fly an airplane
       without knowing how-except the pilot isn't the only one in trouble. Your
       entire company is.
-    </blockquote>
-    <p class="mt-10 text-lg">
+    </p>
+    <p class="text-lg">
       It makes a clear analogy of something everyone can understan, (how
       terrible it would be trying to fly a plane by yourself), and also makes it
       clear that free-wheeling is not a samrt idea, and most importantly, I've
