--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -208,7 +208,9 @@
       poster="/v4/en-us/playlists/Training_Thumbnail.png"
       autoplay="false"
       controls="true"
-      class="mt-20 w-full h-full"
+      width="100%"
+      height="100%"
+      class="mt-20"
     >
       <source src="/v4/en-us/videos/sampleVideo.mp4" type="video/mp4" />
     </video>
