something is not working

--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -213,6 +213,7 @@
       class="mt-20"
     >
       <source src="/v4/en-us/videos/sampleVideo.mp4" type="video/mp4" />
+      Something is not working:(
     </video>
   </body>
 </html>
