--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -212,7 +212,7 @@
       height="100%"
       class="mt-20"
     >
-      <source src="/v4/en-us/videos/anotherVideo.mp4" type="video/mp4" />
+      <source src="../../videos/anotherVideo.mp4" type="video/mp4" />
       Something is not working:(
     </video>
   </body>
