--- a/v4/en-us/six-appeal/the-hook/the-hook.html
+++ b/v4/en-us/six-appeal/the-hook/the-hook.html
@@ -205,14 +205,14 @@
       is because she is freewheeling her email marketing. Cue instant attention.
     </p>
     <video
-      poster="/v4/en-us/playlists/Training_Thumbnail.png"
+      poster="../../playlists/Training_Thumbnail.png"
       autoplay="false"
       controls="true"
       width="100%"
       height="100%"
       class="mt-20"
     >
-      <source src="../../videos/anotherVideo.mp4" type="video/mp4" />
+      <source src="../../videos/sampleVideo.mp4" type="video/mp4" />
       Something is not working:(
     </video>
   </body>
